--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="d-flex h-100 vh-100">
-  <div class="col-2 bg-light border-right d-flex flex-column h-100">
+  <div class="col-2 bg-light border-end border-danger d-flex flex-column h-100">
     <app-side-bar></app-side-bar>
   </div>
-  <div class="col-10 d-flex flex-column">
+  <div
+    class="col-10 d-flex flex-column p-5"
+  >
     <app-task-list (openModalEvent)="openAddTaskModal()"></app-task-list>
     <app-add-task (addNewTaskEvent)="createNewTask($event)"></app-add-task>
   </div>
