--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -1,18 +1,17 @@
-<div class="sideBarContainer ">
-  <div>
+<div class="sideBarContainer">
+  <div class="m-4">
     <h1><span class="text-success">TASK</span>IT</h1>
     <button class="btn btn-success">Task List</button>
   </div>
-  <div class="profileContainer">
-    <div class="imageContainer">
-      <img
-        class="img-fluid"
-        src="/assets/images/profile.jpg"
-        alt="profile picture"
-      />
-    </div>
+  <div class="d-flex align-items-center border-top border-2">
+    <img
+      src="/assets/images/profile.jpg"
+      alt="profile picture"
+      class="img-fluid rounded-circle mr-3"
+      style="width: 50px; height: 50px"
+    />
     <div class="d-flex flex-column mr-3">
-      <span>Name</span>
+      <span>Monkey D NFT</span>
       <span>email@example.com</span>
     </div>
     <div>
