--- a/src/app/shared/side-bar/side-bar.component.scss
+++ b/src/app/shared/side-bar/side-bar.component.scss
@@ -1,21 +1,19 @@
-.sideBarContainer{
+.sideBarContainer {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
 }
 
-.profileContainer{
+.profileContainer {
   border-top: 1px solid #ccc;
   display: flex;
   align-items: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   padding: 10px;
 }
+
 .imageContainer {
-  width: 50px;
-  height: 50px;
+ 
   border-radius: 50%;
 }
-
