--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,67 +1,85 @@
-<header>
+<header class="mb-4">
   <h1>Task List</h1>
 </header>
-<div class="d-flex justify-content-between my-2">
-  <div class="d-flex justify-content-around">
-    <label>Filters:</label>
-    <select class="form-select" aria-label="Default select example">
-      <option selected disabled hidden>Status</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-    <select class="form-select" aria-label="Default select example">
-      <option selected disabled hidden>Date</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-    <select class="form-select" aria-label="Default select example">
-      <option selected>Priority</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-  </div>
+<div class="d-flex justify-content-between align-items-center mb-4">
   <div>
-    <button (click)="onAddNewTask()" class="btn btn-success rounded">
-      Add new Task
-    </button>
+    <label class="mr-2">Filters:</label>
+    <select
+      class="form-select d-inline-block w-auto mr-2"
+      [(ngModel)]="selectedStatus"
+      (change)="filterTasks()"
+    >
+      <option value="" selected hidden>Status</option>
+      <option value="">--All--</option>
+      <option *ngFor="let status of statuses" [value]="status">
+        {{ status }}
+      </option>
+    </select>
+    <select
+      class="form-select d-inline-block w-auto mr-2"
+      [(ngModel)]="selectedDate"
+      (change)="filterTasks()"
+    >
+      <option value="" selected hidden>Date</option>
+      <option value="">--All--</option>
+      <option *ngFor="let date of getUniqueDates()" [value]="date">
+        {{ date | date }}
+      </option>
+    </select>
+    <select
+      class="form-select d-inline-block w-auto"
+      [(ngModel)]="selectedPriority"
+      (change)="filterTasks()"
+    >
+      <option value="" selected hidden>Priority</option>
+      <option value="">--All--</option>
+      <option *ngFor="let priority of priorities" [value]="priority">
+        {{ priority }}
+      </option>
+    </select>
   </div>
+  <button (click)="onAddNewTask()" class="btn btn-success rounded">
+    Add new Task
+  </button>
 </div>
-<div class="table-responsive border border-black">
-  <table class="table">
+<div class="table-responsive">
+  <table
+    class="table table-striped table-bordered table-hover rounded-3 custom-table"
+  >
     <thead>
       <tr>
-        <th scope="col">title</th>
+        <th scope="col">Title</th>
         <th scope="col">Due Date</th>
         <th scope="col">Priority</th>
         <th scope="col">Status</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
-    <tbody class="table-group-divider">
+    <tbody>
       <tr *ngFor="let task of tasks">
         <th scope="row">{{ task.title }}</th>
         <td>{{ task.dueDate | date }}</td>
         <td>{{ task.priority }}</td>
         <td>{{ task.status }}</td>
         <td class="d-flex justify-content-around">
-          <span
-            class="material-symbols-outlined"
+          <i
+            class="material-icons"
             (click)="onViewTask(task.taskId)"
+            title="View Task"
+            >visibility</i
           >
-            visibility
-          </span>
-          <span class="material-symbols-outlined" (click)="onEditTask(task.taskId)">
-            edit
-          </span>
-          <span
-            class="material-symbols-outlined"
+          <i
+            class="material-icons"
+            (click)="onEditTask(task.taskId)"
+            title="Edit Task"
+            >edit</i
+          >
+          <i
+            class="material-icons"
             (click)="onDeleteTask(task.taskId)"
+            title="Delete Task"
+            >delete</i
           >
-            delete
-          </span>
         </td>
       </tr>
     </tbody>
