--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<div class="d-flex h-100 vh-100">
-  <div class="col-2 bg-light border-end border-danger d-flex flex-column h-100">
+<mat-sidenav-container class="h-100 vh-100">
+  <mat-sidenav #sidenav mode="side" opened class="bg-light">
     <app-side-bar></app-side-bar>
-  </div>
-  <div
-    class="col-10 d-flex flex-column p-5"
-  >
+  </mat-sidenav>
+  <mat-sidenav-content class="p-5 d-flex flex-column">
     <app-task-list (openModalEvent)="openAddTaskModal()"></app-task-list>
+    <mat-divider></mat-divider>
     <app-add-task (addNewTaskEvent)="createNewTask($event)"></app-add-task>
-  </div>
-</div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
