--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,87 +1,111 @@
-<header class="mb-4">
-  <h1>Task List</h1>
-</header>
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <div>
-    <label class="mr-2">Filters:</label>
-    <select
-      class="form-select d-inline-block w-auto mr-2"
-      [(ngModel)]="selectedStatus"
-      (change)="filterTasks()"
-    >
-      <option value="" selected hidden>Status</option>
-      <option value="">--All--</option>
-      <option *ngFor="let status of statuses" [value]="status">
-        {{ status }}
-      </option>
-    </select>
-    <select
-      class="form-select d-inline-block w-auto mr-2"
-      [(ngModel)]="selectedDate"
-      (change)="filterTasks()"
-    >
-      <option value="" selected hidden>Date</option>
-      <option value="">--All--</option>
-      <option *ngFor="let date of getUniqueDates()" [value]="date">
-        {{ date | date }}
-      </option>
-    </select>
-    <select
-      class="form-select d-inline-block w-auto"
-      [(ngModel)]="selectedPriority"
-      (change)="filterTasks()"
-    >
-      <option value="" selected hidden>Priority</option>
-      <option value="">--All--</option>
-      <option *ngFor="let priority of priorities" [value]="priority">
-        {{ priority }}
-      </option>
-    </select>
+<mat-toolbar color="primary" style="background-color: green;">
+  <span>Task List</span>
+</mat-toolbar>
+
+<mat-card>
+  <div class="action-container">
+    <mat-card-content>
+      <mat-form-field appearance="fill" class="mr-2">
+        <mat-label>Status</mat-label>
+        <mat-select
+          [(value)]="selectedStatus"
+          (selectionChange)="filterTasks()"
+        >
+          <mat-option value="">--All--</mat-option>
+          <mat-option *ngFor="let status of statuses" [value]="status">
+            {{ status }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" class="mr-2">
+        <mat-label>Date</mat-label>
+        <mat-select [(value)]="selectedDate" (selectionChange)="filterTasks()">
+          <mat-option value="">--All--</mat-option>
+          <mat-option *ngFor="let date of uniqueDates" [value]="date">
+            {{ date | date }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Priority</mat-label>
+        <mat-select
+          [(value)]="selectedPriority"
+          (selectionChange)="filterTasks()"
+        >
+          <mat-option value="">--All--</mat-option>
+          <mat-option *ngFor="let priority of priorities" [value]="priority">
+            {{ priority }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-flat-button color="accent" (click)="onAddNewTask()">
+        Add New Task
+      </button>
+    </mat-card-actions>
   </div>
-  <button (click)="onAddNewTask()" class="btn btn-success rounded">
-    Add new Task
-  </button>
-</div>
-<div class="table-responsive">
-  <table
-    class="table table-striped table-bordered table-hover rounded-3 custom-table"
-  >
-    <thead>
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Due Date</th>
-        <th scope="col">Priority</th>
-        <th scope="col">Status</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let task of tasks">
-        <th scope="row">{{ task.title }}</th>
-        <td>{{ task.dueDate | date }}</td>
-        <td>{{ task.priority }}</td>
-        <td>{{ task.status }}</td>
-        <td class="d-flex justify-content-around">
-          <i
-            class="material-icons"
-            (click)="onViewTask(task.taskId)"
-            title="View Task"
-            >visibility</i
-          >
-          <i
-            class="material-icons"
-            (click)="onEditTask(task.taskId)"
-            title="Edit Task"
-            >edit</i
-          >
-          <i
-            class="material-icons"
-            (click)="onDeleteTask(task.taskId)"
-            title="Delete Task"
-            >delete</i
-          >
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+</mat-card>
+
+<table mat-table [dataSource]="tasks">
+  <!-- Task ID -->
+  <ng-container matColumnDef="taskId">
+    <mat-header-cell *matHeaderCellDef>Task ID</mat-header-cell>
+    <mat-cell *matCellDef="let task">{{ task.taskId }}</mat-cell>
+  </ng-container>
+
+  <!-- title column -->
+  <ng-container matColumnDef="title">
+    <mat-header-cell *matHeaderCellDef>title</mat-header-cell>
+    <mat-cell *matCellDef="let task">{{ task.title }}</mat-cell>
+  </ng-container>
+
+  <!-- dueDate column -->
+  <ng-container matColumnDef="dueDate">
+    <mat-header-cell *matHeaderCellDef>dueDate</mat-header-cell>
+    <mat-cell *matCellDef="let task">{{ task.dueDate | date }}</mat-cell>
+  </ng-container>
+
+  <!-- priority column -->
+  <ng-container matColumnDef="priority">
+    <mat-header-cell *matHeaderCellDef>priority</mat-header-cell>
+    <mat-cell *matCellDef="let task">{{ task.priority }}</mat-cell>
+  </ng-container>
+
+  <!-- status column -->
+  <ng-container matColumnDef="status">
+    <mat-header-cell *matHeaderCellDef>status</mat-header-cell>
+    <mat-cell *matCellDef="let task">{{ task.status }}</mat-cell>
+  </ng-container>
+  <!-- Actions column -->
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+    <mat-cell *matCellDef="let task">
+      <button mat-icon-button color="primary" (click)="onViewTask(task.taskId)">
+        <mat-icon>visibility</mat-icon>
+      </button>
+      <button mat-icon-button color="primary" (click)="onEditTask(task.taskId)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="onDeleteTask(task.taskId)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let task; columns: displayedColumns">
+    <button mat-icon-button color="primary" (click)="onViewTask(task.taskId)">
+      <mat-icon>visibility</mat-icon>
+    </button>
+    <button mat-icon-button color="primary" (click)="onViewTask(task.taskId)">
+      <mat-icon>edit</mat-icon>
+    </button>
+    <button mat-icon-button color="primary" (click)="onViewTask(task.taskId)">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </mat-row>
+</table>
