--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -90,7 +90,7 @@
       <button mat-icon-button color="primary" (click)="onEditTask(task.taskId)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button color="warn" (click)="onDeleteTask(task.taskId)">
+      <button type="submit" mat-icon-button color="warn" (click)="onDeleteTask(task.taskId)">
         <mat-icon>delete</mat-icon>
       </button>
     </mat-cell>
