--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -8,10 +8,9 @@
   </div>
   <div class="d-flex align-items-center border-top border-2">
     <img
-      src="/assets/images/profile.jpg"
+      src="http://source.unsplash.com/50x50/?profile"
       alt="profile picture"
       class="img-fluid rounded-circle mr-3"
-      style="width: 50px; height: 50px"
     />
     <div class="d-flex flex-column mr-3">
       <span>Monkey D NFT</span>
