--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -2,8 +2,24 @@
   <div class="m-4">
     <h1><span class="text-success">TASK</span>IT</h1>
     <div class="d-flex flex-column gap-2">
-      <button class="btn btn-success" (click)="gotoTask()">Task List</button>
-      <button class="btn btn-success" (click)="gotoKanban()">KanBan Board</button>
+      <button
+        #btn="routerLinkActive"
+        [ngClass]="btn.isActive ? 'btn btn-success' : 'btn btn-light'"
+        routerLink="/task-list"
+        routerLinkActive
+        (click)="gotoTask()"
+      >
+        Task List
+      </button>
+      <button
+        #btn2="routerLinkActive"
+        [ngClass]="btn2.isActive ? 'btn btn-success' : 'btn btn-light'"
+        routerLink="/kanban-board"
+        routerLinkActive
+        (click)="gotoKanban()"
+      >
+        KanBan Board
+      </button>
     </div>
   </div>
   <div class="d-flex align-items-center border-top border-2">
