--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<mat-card class="login-card">
+  <mat-card-title>
+    <h1>Welcome Back to TASKIT!</h1>
+    <p>Login to continue.</p>
+  </mat-card-title>
+  <form class="login-form">
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput placeholder="john.doe@example.com" />
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input type="password" matInput />
+    </mat-form-field>
+
+    <div class="action-container">
+      <p class="forgot-password-text">
+        <span class="forgot-password-link">Forgot Password?</span>
+      </p>
+      <button mat-raised-button class="login-button" color="primary">
+        Login
+      </button>
+    </div>
+
+    <div class="signup-text">
+      New to TASKIT?
+      <span class="signup-link"><a routerLink="/signup"> Sign Up</a></span>
+    </div>
+  </form>
+</mat-card>
