--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,38 @@
+<mat-card class="signup-card">
+  <mat-card-title>
+    <h1>Welcome to TASKIT!</h1>
+    <p>Sign up to get things done.</p>
+  </mat-card-title>
+  <form class="signup-form">
+    <mat-form-field appearance="outline">
+      <mat-label>First Name</mat-label>
+      <input matInput placeholder="John" />
+    </mat-form-field>
 
+    <mat-form-field appearance="outline">
+      <mat-label>Last Name</mat-label>
+      <input matInput placeholder="Doe" />
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput placeholder="john.doe@example.com" />
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input type="password" matInput />
+      <mat-hint>Minimum 8 characters</mat-hint>
+    </mat-form-field>
+
+    <div class="action-container">
+      <p class="login-text">
+        Have an account?
+        <span class="login-link"><a routerLink="/login">Login</a></span>
+      </p>
+      <button mat-raised-button class="signup-button" color="primary">
+        Sign Up
+      </button>
+    </div>
+  </form>
+</mat-card>
