--- a/src/app/kanban-board/kanban-board.component.html
+++ b/src/app/kanban-board/kanban-board.component.html
@@ -2,10 +2,7 @@
   <span>KanBan</span>
 </mat-toolbar>
 
-<div
-  class="d-flex gap-5 flex-row h-100 vh-80 justify-content-center align-items-center"
-  cdkDropListGroup
->
+<div class="board-container" cdkDropListGroup>
   <mat-card class="card-board">
     <mat-card-title>To do</mat-card-title>
     <mat-card-content
