--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,27 @@
+.full-height {
+  height: 100vh;
+}
 
+.content-padding {
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+}
 
+.mat-sidenav-container {
+  .mat-icon-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 100;
+  }
+
+  // Close button inside sidenav
+  .mat-sidenav {
+    .mat-icon-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  }
+}
