--- a/src/app/components/warning-dialog/warning-dialog.component.html
+++ b/src/app/components/warning-dialog/warning-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="modal-container justify-content-center align-items-center">
+<div class="modal-container">
   <div class="modal-header">
     <h1>Warning</h1>
   </div>
@@ -6,7 +6,7 @@
     <p>Are you sure you want to delete this task?</p>
     <p class="task-title">'{{ task?.title }}'</p>
   </div>
-  <div class="modal-footer d-flex justify-content-center">
+  <div class="modal-footer">
     <button
       mat-raised-button
       class="confirm-btn"
