--- a/src/app/components/warning-dialog/warning-dialog.component.scss
+++ b/src/app/components/warning-dialog/warning-dialog.component.scss
@@ -1,4 +1,8 @@
 .modal-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -22,6 +26,8 @@
 }
 
 .modal-footer {
+  display: flex;
+  justify-content: center;
   border-top: 1px solid #e1e1e1;
   padding-top: 10px;
   margin-top: 15px;
