--- a/src/app/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban-board/kanban-board.component.scss
@@ -3,10 +3,20 @@ mat-toolbar {
   background-color: green;
 }
 
+// class="d-flex gap-5 flex-row h-100 vh-80 justify-content-center align-items-center"
 .d-flex {
   padding: 20px;
   background-color: #f5f5f5;
 }
+
+.board-container {
+  display: flex;
+  gap: 5rem;
+  height: 80vh;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .card-board {
   width: 300px;
@@ -14,14 +24,14 @@ mat-toolbar {
   overflow-y: auto;
 
   mat-card-title {
-      background-color: #e0e0e0; 
-      padding: 10px;
-      border-radius: 5px;
+    background-color: #e0e0e0;
+    padding: 10px;
+    border-radius: 5px;
   }
 
   mat-card-content {
-      max-height: 500px;
-      overflow-y: auto;
-      padding: 10px 0;
+    max-height: 500px;
+    overflow-y: auto;
+    padding: 10px 0;
   }
 }
