--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,12 @@
 <mat-card class="login-card">
   <mat-card-title>
     <h1>Welcome Back to TASKIT!</h1>
-    <p>Login to continue.</p>
+    <p *ngIf="!showResetPasswordForm">Login to continue.</p>
+    <p *ngIf="showResetPasswordForm">
+      Enter your email to reset your password.
+    </p>
   </mat-card-title>
-  <form class="login-form">
+  <form class="login-form" *ngIf="!showResetPasswordForm">
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
       <input type="email" matInput placeholder="john.doe@example.com" />
@@ -16,7 +19,11 @@
 
     <div class="action-container">
       <p class="forgot-password-text">
-        <span class="forgot-password-link">Forgot Password?</span>
+        <span
+          class="forgot-password-link"
+          (click)="showResetPasswordForm = true"
+          >Forgot Password?</span
+        >
       </p>
       <button mat-raised-button class="login-button" color="primary">
         Login
@@ -26,6 +33,24 @@
     <div class="signup-text">
       New to TASKIT?
       <span class="signup-link"><a routerLink="/signup"> Sign Up</a></span>
+    </div>
+  </form>
+
+  <form class="reset-password-form" *ngIf="showResetPasswordForm">
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput placeholder="john.doe@example.com" />
+    </mat-form-field>
+
+    <div class="action-container">
+      <button mat-raised-button class="reset-button" color="primary">
+        Send Reset Link
+      </button>
+      <p class="back-to-login-text">
+        <span class="back-to-login-link" (click)="showResetPasswordForm = false"
+          >Back to Login</span
+        >
+      </p>
     </div>
   </form>
 </mat-card>
