--- a/src/app/shared/side-bar/side-bar.component.scss
+++ b/src/app/shared/side-bar/side-bar.component.scss
@@ -4,7 +4,44 @@
   flex-direction: column;
   justify-content: space-between;
 
+
+  .menu-section {
+    margin: 2rem 1rem;
+  }
+
+  .highlight-text {
+    color: green;
+  }
+
+  .menu-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .active {
+    background-color: green;
+    color: white;
+  }
+
+  .profile-section {
+    display: flex;
+    align-items: center;
+    border-top: 2px solid black;
+  }
+
+  .profile-img {
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+    margin-right: 1rem;
+  }
 }
+
 
 .profileContainer {
   border-top: 1px solid #ccc;
