--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,56 +1,51 @@
-<mat-toolbar color="primary" style="background-color: green">
+<mat-toolbar color="primary">
   <span>Task List</span>
 </mat-toolbar>
 
-<mat-card>
-  <div class="action-container">
-    <mat-card-content>
-      <mat-form-field appearance="fill" class="mr-2">
-        <mat-label>Status</mat-label>
-        <mat-select
-          [(value)]="selectedStatus"
-          (selectionChange)="filterTasks()"
-        >
-          <mat-option value="">--All--</mat-option>
-          <mat-option *ngFor="let status of statuses" [value]="status">
-            {{ status }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+<mat-card class="action-card">
+  <mat-card-content fxLayout="row" fxLayoutGap="20px">
+    <mat-form-field appearance="fill">
+      <mat-label>Status</mat-label>
+      <mat-select [(value)]="selectedStatus" (selectionChange)="filterTasks()">
+        <mat-option value="">--All--</mat-option>
+        <mat-option *ngFor="let status of statuses" [value]="status">
+          {{ status }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-      <mat-form-field appearance="fill" class="mr-2">
-        <mat-label>Date</mat-label>
-        <mat-select [(value)]="selectedDate" (selectionChange)="filterTasks()">
-          <mat-option value="">--All--</mat-option>
-          <mat-option *ngFor="let date of uniqueDates" [value]="date">
-            {{ date | date }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Date</mat-label>
+      <mat-select [(value)]="selectedDate" (selectionChange)="filterTasks()">
+        <mat-option value="">--All--</mat-option>
+        <mat-option *ngFor="let date of uniqueDates" [value]="date">
+          {{ date | date : "shortDate" }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Priority</mat-label>
-        <mat-select
-          [(value)]="selectedPriority"
-          (selectionChange)="filterTasks()"
-        >
-          <mat-option value="">--All--</mat-option>
-          <mat-option *ngFor="let priority of priorities" [value]="priority">
-            {{ priority }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
+    <mat-form-field appearance="fill">
+      <mat-label>Priority</mat-label>
+      <mat-select
+        [(value)]="selectedPriority"
+        (selectionChange)="filterTasks()"
+      >
+        <mat-option value="">--All--</mat-option>
+        <mat-option *ngFor="let priority of priorities" [value]="priority">
+          {{ priority }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card-content>
 
-    <mat-card-actions>
-      <button mat-flat-button color="accent" (click)="onAddNewTask()">
-        Add New Task
-      </button>
-    </mat-card-actions>
-  </div>
+  <mat-card-actions align="end">
+    <button mat-flat-button color="accent" (click)="onAddNewTask()">
+      Add New Task
+    </button>
+  </mat-card-actions>
 </mat-card>
 
-<table mat-table [dataSource]="tasks">
+<table mat-table [dataSource]="tasks" class="full-width-table">
   <!-- Task ID -->
   <ng-container matColumnDef="taskId">
     <mat-header-cell *matHeaderCellDef>Task ID</mat-header-cell>
@@ -80,37 +75,26 @@
     <mat-header-cell *matHeaderCellDef>status</mat-header-cell>
     <mat-cell *matCellDef="let task">{{ task.status }}</mat-cell>
   </ng-container>
+
   <!-- Actions column -->
   <ng-container matColumnDef="actions">
-    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
     <mat-cell *matCellDef="let task">
+      <!-- View button -->
       <button mat-icon-button color="primary" (click)="onViewTask(task.taskId)">
         <mat-icon>visibility</mat-icon>
       </button>
+      <!-- Edit button -->
       <button mat-icon-button color="primary" (click)="onEditTask(task.taskId)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button
-        type="submit"
-        mat-icon-button
-        color="warn"
-        (click)="onDeleteTask(task.taskId)"
-      >
+      <!-- Delete button -->
+      <button mat-icon-button color="warn" (click)="onDeleteTask(task.taskId)">
         <mat-icon>delete</mat-icon>
       </button>
     </mat-cell>
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let task; columns: displayedColumns">
-    <button mat-icon-button color="primary" (click)="onViewTask(task.taskId)">
-      <mat-icon>visibility</mat-icon>
-    </button>
-    <button mat-icon-button color="primary" (click)="onEditTask(task.taskId)">
-      <mat-icon>edit</mat-icon>
-    </button>
-    <button mat-icon-button color="warn" (click)="onDeleteTask(task.taskId)">
-      <mat-icon>delete</mat-icon>
-    </button>
-  </mat-row>
+  <mat-row *matRowDef="let task; columns: displayedColumns"></mat-row>
 </table>
