working on login/sigup flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
 <mat-sidenav-container class="full-height">
-  <mat-sidenav #sidenav [mode]="getHandsetMode(isHandse$ | async)" opened>
-    <button *ngIf="isHandse$ | async" mat-icon-button (click)="sidenav.close()">
+  <mat-sidenav
+    #sidenav
+    [mode]="getHandsetMode(isHandset$ | async)"
+    opened
+    *ngIf="isAuthenticated"
+  >
+    <button *ngIf="isHandset$ | async" mat-icon-button (click)="sidenav.close()">
       <span class="material-symbols-outlined">close</span>
     </button>
     <app-side-bar></app-side-bar>
   </mat-sidenav>
   <mat-sidenav-content class="content-padding">
-    <button mat-icon-button (click)="toggleSidenav()" *ngIf="isHandse$ | async">
+    <button mat-icon-button (click)="toggleSidenav()" *ngIf="isHandset$ | async">
       <span class="material-symbols-outlined">menu</span>
     </button>
     <router-outlet></router-outlet>
